--- a/dvach-browser/Base.lproj/Main.storyboard
+++ b/dvach-browser/Base.lproj/Main.storyboard
@@ -849,11 +849,11 @@
                         <viewControllerLayoutGuide type="bottom" id="xko-xx-eS4"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Oms-K5-odr">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="550"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="440"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" bounces="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ekp-o7-QBh" customClass="DVBCreatePostScrollView">
-                                <rect key="frame" x="0.0" y="64" width="320" height="486"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ekp-o7-QBh" customClass="DVBCreatePostScrollView">
+                                <rect key="frame" x="0.0" y="20" width="320" height="420"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RLY-YJ-MBR" userLabel="Container For Post Elements" customClass="DVBContainerForPostElements">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="441.5"/>
@@ -1046,13 +1046,13 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hgX-62-n6a" customClass="DVBPostPhotoContainerView">
-                                                <rect key="frame" x="91" y="365" width="61.5" height="61"/>
+                                                <rect key="frame" x="91" y="365" width="61" height="61"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XOd-v6-1ld" customClass="DVBPictureToSendPreviewImageView">
-                                                        <rect key="frame" x="0.0" y="0.0" width="61.5" height="61"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="61" height="61"/>
                                                     </imageView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dXc-Bd-DQN" userLabel="Add photo button container" customClass="DVBAddPhotoIconImageViewContainer">
-                                                        <rect key="frame" x="19.5" y="20" width="22" height="22"/>
+                                                        <rect key="frame" x="19" y="20" width="22" height="22"/>
                                                         <subviews>
                                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AddImage" translatesAutoresizingMaskIntoConstraints="NO" id="nbz-cE-tFY" customClass="DVBAddPhotoIconImageView">
                                                                 <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
@@ -1068,7 +1068,7 @@
                                                         </constraints>
                                                     </view>
                                                     <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xVa-tw-g8m">
-                                                        <rect key="frame" x="0.0" y="0.0" width="61.5" height="61"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="61" height="61"/>
                                                         <connections>
                                                             <action selector="pickPhotoAction:" destination="Bhq-1W-f9J" eventType="touchUpInside" id="n5y-sr-3U4"/>
                                                         </connections>
@@ -1088,7 +1088,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WY1-1O-Tb7" customClass="DVBPostPhotoContainerView">
-                                                <rect key="frame" x="167.5" y="365" width="61.5" height="61.5"/>
+                                                <rect key="frame" x="167" y="365" width="61.5" height="61.5"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nJq-yt-HiK" customClass="DVBPictureToSendPreviewImageView">
                                                         <rect key="frame" x="0.0" y="0.0" width="61.5" height="61.5"/>
@@ -1130,13 +1130,13 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lmU-VB-eLY" customClass="DVBPostPhotoContainerView">
-                                                <rect key="frame" x="244.5" y="365" width="60.5" height="61.5"/>
+                                                <rect key="frame" x="244" y="365" width="61" height="61.5"/>
                                                 <subviews>
                                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6z5-Oj-JM8" customClass="DVBPictureToSendPreviewImageView">
-                                                        <rect key="frame" x="0.0" y="0.0" width="60.5" height="61.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="61" height="61.5"/>
                                                     </imageView>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q4K-gM-aAF" userLabel="Add photo button container" customClass="DVBAddPhotoIconImageViewContainer">
-                                                        <rect key="frame" x="18.5" y="20" width="22" height="22"/>
+                                                        <rect key="frame" x="19" y="20" width="22" height="22"/>
                                                         <subviews>
                                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AddImage" translatesAutoresizingMaskIntoConstraints="NO" id="mxh-fE-7VH" customClass="DVBAddPhotoIconImageView">
                                                                 <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
@@ -1152,7 +1152,7 @@
                                                         </constraints>
                                                     </view>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="815-m3-Nve">
-                                                        <rect key="frame" x="0.0" y="0.0" width="60.5" height="61.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="61" height="61.5"/>
                                                         <connections>
                                                             <action selector="pickPhotoAction:" destination="Bhq-1W-f9J" eventType="touchUpInside" id="DrP-14-EKX"/>
                                                         </connections>
@@ -1235,6 +1235,9 @@
                                     <constraint firstAttribute="bottomMargin" secondItem="RLY-YJ-MBR" secondAttribute="bottom" id="Pjx-kw-kbu"/>
                                     <constraint firstAttribute="trailing" secondItem="RLY-YJ-MBR" secondAttribute="trailing" id="zCx-7H-HlV"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="Bhq-1W-f9J" id="vv7-hC-ttP"/>
+                                </connections>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1272,7 +1275,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="320" height="550"/>
+                    <size key="freeformSize" width="320" height="440"/>
                     <connections>
                         <outlet property="closeButton" destination="dUR-YR-YFs" id="0vD-XH-VVU"/>
                         <outlet property="containerForPostElementsView" destination="RLY-YJ-MBR" id="Hsd-wI-uQL"/>
