--- a/dvach-browser/Controllers/WebM/VDLPlaybackViewController.xib
+++ b/dvach-browser/Controllers/WebM/VDLPlaybackViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="VDLPlaybackViewController">
@@ -41,14 +41,25 @@
                         <action selector="playandPause:" destination="-1" eventType="touchUpInside" id="174"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6pP-GY-HMZ">
+                    <rect key="frame" x="562" y="550" width="30" height="30"/>
+                    <state key="normal" image="ActionShare"/>
+                    <connections>
+                        <action selector="shareButton:" destination="-1" eventType="touchUpInside" id="Q8f-fZ-bZw"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
                 <constraint firstItem="50" firstAttribute="centerX" secondItem="6" secondAttribute="centerX" id="2UV-QB-GXF"/>
                 <constraint firstItem="14" firstAttribute="leading" secondItem="6" secondAttribute="leading" id="4wo-cB-Htb"/>
                 <constraint firstItem="14" firstAttribute="top" secondItem="6" secondAttribute="top" id="5aK-XU-XVI"/>
+                <constraint firstItem="6pP-GY-HMZ" firstAttribute="top" secondItem="50" secondAttribute="top" id="778-2f-Nbd"/>
                 <constraint firstAttribute="bottom" secondItem="14" secondAttribute="bottom" id="QAL-rq-7Az"/>
                 <constraint firstAttribute="trailing" secondItem="14" secondAttribute="trailing" id="YYW-vO-9Kz"/>
                 <constraint firstAttribute="bottom" secondItem="50" secondAttribute="bottom" constant="20" id="avz-JP-Y9E"/>
+                <constraint firstAttribute="trailing" secondItem="6pP-GY-HMZ" secondAttribute="trailing" constant="8" id="n6H-LC-1Jb"/>
+                <constraint firstItem="6pP-GY-HMZ" firstAttribute="height" secondItem="50" secondAttribute="height" id="qZz-qN-8d7"/>
+                <constraint firstItem="6pP-GY-HMZ" firstAttribute="width" secondItem="50" secondAttribute="width" id="rAa-k3-Y4p"/>
             </constraints>
             <point key="canvasLocation" x="291" y="-544"/>
         </view>
@@ -76,4 +87,7 @@
             <point key="canvasLocation" x="306" y="167"/>
         </view>
     </objects>
+    <resources>
+        <image name="ActionShare" width="30" height="30"/>
+    </resources>
 </document>
