--- a/dvach-browser/Controllers/WebM/VDLPlaybackViewController.xib
+++ b/dvach-browser/Controllers/WebM/VDLPlaybackViewController.xib
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1605" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="VDLPlaybackViewController">
             <connections>
                 <outlet property="movieView" destination="14" id="29"/>
                 <outlet property="navigationItemView" destination="30" id="79K-S4-gd0"/>
-                <outlet property="playPauseButton" destination="50" id="192"/>
                 <outlet property="positionSlider" destination="33" id="179"/>
                 <outlet property="view" destination="6" id="7"/>
             </connections>
@@ -23,32 +22,12 @@
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="50">
-                    <rect key="frame" x="285" y="550" width="30" height="30"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="MTK-KH-ARh"/>
-                        <constraint firstAttribute="width" constant="30" id="vtO-sx-Gnk"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                    <state key="normal" title="|&gt;||">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <state key="highlighted">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                    <connections>
-                        <action selector="playandPause:" destination="-1" eventType="touchUpInside" id="174"/>
-                    </connections>
-                </button>
             </subviews>
             <constraints>
-                <constraint firstItem="50" firstAttribute="centerX" secondItem="6" secondAttribute="centerX" id="2UV-QB-GXF"/>
                 <constraint firstItem="14" firstAttribute="leading" secondItem="6" secondAttribute="leading" id="4wo-cB-Htb"/>
                 <constraint firstItem="14" firstAttribute="top" secondItem="6" secondAttribute="top" id="5aK-XU-XVI"/>
                 <constraint firstAttribute="bottom" secondItem="14" secondAttribute="bottom" id="QAL-rq-7Az"/>
                 <constraint firstAttribute="trailing" secondItem="14" secondAttribute="trailing" id="YYW-vO-9Kz"/>
-                <constraint firstAttribute="bottom" secondItem="50" secondAttribute="bottom" constant="20" id="avz-JP-Y9E"/>
             </constraints>
             <point key="canvasLocation" x="291" y="-544"/>
         </view>
