--- a/dvach-browser/WebViews.storyboard
+++ b/dvach-browser/WebViews.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dRg-gy-XYw">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dRg-gy-XYw">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -63,43 +63,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q7x-ZQ-0xo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2446" y="972"/>
-        </scene>
-        <!--Captcha View Controller-->
-        <scene sceneID="6Xz-5N-WZT">
-            <objects>
-                <viewController storyboardIdentifier="DVBCaptchaViewController" id="6HB-7z-cat" customClass="DVBCaptchaViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="LR1-bJ-Kqg"/>
-                        <viewControllerLayoutGuide type="bottom" id="d9A-Ng-jI7"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="4vV-WK-OZR">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="440"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="27P-Gn-0dv">
-                                <rect key="frame" x="0.0" y="20" width="320" height="420"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <dataDetectorType key="dataDetectorTypes"/>
-                            </webView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="27P-Gn-0dv" secondAttribute="trailing" id="SMQ-M8-LkP"/>
-                            <constraint firstItem="d9A-Ng-jI7" firstAttribute="top" secondItem="27P-Gn-0dv" secondAttribute="bottom" id="YwN-ox-VBW"/>
-                            <constraint firstItem="27P-Gn-0dv" firstAttribute="leading" secondItem="4vV-WK-OZR" secondAttribute="leading" id="hM7-yJ-k6b"/>
-                            <constraint firstItem="27P-Gn-0dv" firstAttribute="top" secondItem="LR1-bJ-Kqg" secondAttribute="bottom" id="z97-GR-SJo"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="nLw-6V-yVy"/>
-                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="320" height="440"/>
-                    <connections>
-                        <outlet property="webView" destination="27P-Gn-0dv" id="pLb-zp-evH"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Kud-RR-OgQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2010" y="1501"/>
         </scene>
     </scenes>
 </document>
