--- a/dvach-browser/Base.lproj/Main.storyboard
+++ b/dvach-browser/Base.lproj/Main.storyboard
@@ -178,9 +178,9 @@
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <attributedString key="attributedText">
                                     <fragment>
-                                        <string key="content">Два.ч — это система форумов, для свободного общения, где любая точка зрения имеет право на жизнь. Здесь нет регистрации и подписываться не нужно, но это не избавляет от необходимости соблюдать тематику форумов и законы РФ. 
+                                        <mutableString key="content">Два.ч — это система форумов, для свободного общения, где любая точка зрения имеет право на жизнь. Здесь нет регистрации и подписываться не нужно, но это не избавляет от необходимости соблюдать тематику форумов и законы РФ. 
 
-Если вы считаете какие-то сообщения неуместными — отправьте жалобу. В течении суток модераторы их проверят и, при необходимости, сотрут, а автора заблокируют.
+Если вы считаете какие-то сообщения неуместными — отправьте жалобу. В течение суток модераторы их проверят и, при необходимости, сотрут, а автора заблокируют.
 
 Пользовательское соглашение
 1. Использование приложения означает полное и безоговорочное согласие с этим соглашением.
@@ -189,7 +189,7 @@
 4. Мы имеем право вносить изменения в настоящее соглашение без уведомления пользователя.
 5. Мы действуем под юрисдикцией России.
 
-Об ошибках сообщайте на andy@8of.org. Не забудьте указать модель устройства и версию iOS.</string>
+Об ошибках сообщайте на andy@8of.org. Не забудьте указать модель устройства и версию iOS.</mutableString>
                                         <attributes>
                                             <font key="NSFont" size="14" name="HelveticaNeue"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
